# pesel_validator

./: README.md  pyproject.toml
pesel_validator/: manage.py
pesel_validator/pesel_validator/: asgi.py  settings.py  urls.py  wsgi.py
pesel_validator/tests/: test_pesel_validator.py
pesel_validator/validator/: constants.py  forms.py  utils.py  views.py
pesel_validator/validator/templates/validator/: home.html
