[tool.poetry]
name = "pesel-validator"
version = "0.1.0"
description = ""
authors = ["Greg <100309099+Greg75@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
